added --outline button

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -37,6 +37,15 @@ button {
 
   &--color {
     background: var(--color-main2);
+
+    &:hover {
+      background: var(--color-hover);
+    }
+  }
+
+  &--outline {
+    background: transparent;
+    border: 2px solid var(--color-main2);
   }
 
   &--centered {
