--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -109,6 +109,23 @@ a {
   }
 }
 
+.ThinArrow {
+  border-style: solid;
+  border-color: var(--color-text-main);
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 1.5px;
+  cursor: pointer;
+
+  &--up {
+    transform: rotate(-135deg);
+  }
+
+  &--down {
+    transform: rotate(45deg);
+  }
+}
+
 .Badge {
   width: 16px;
   height: 16px;
