--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -146,6 +146,32 @@ a {
   }
 }
 
+.Close {
+  position: relative;
+  width: 12px;
+  height: 12px;
+  cursor: pointer;
+
+  &:before, &:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+    background: var(--color-text-ghost);
+  }
+
+  &:before {
+    left: 0;
+    transform: rotate(45deg);
+  }
+
+  &:after {
+    right: 0;
+    transform: rotate(-45deg);
+  }
+}
+
 .Badge {
   width: 16px;
   height: 16px;
