--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -199,8 +199,56 @@ a {
   }
 }
 
+.Tabs {
+  display: flex;
+  width: 100%;
+  height: 55px;
+
+  @media (min-width: $screen-m) {
+    width: auto;
+  }
+
+  &-Tab {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-right: 4px;
+    padding-right: 22px;
+    padding-left: 22px;
+    font-size: 10px;
+    font-weight: 700;
+    text-align: center;
+    color: var(--color-text-main);
+    background: var(--color-bg);
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &.router-link-active, &--active {
+      color: var(--color-main1);
+
+      &:after {
+        content: '';
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        width: 50px;
+        height: 4px;
+        background: var(--color-main1);
+        transform: translateX(-50%);
+      }
+    }
+  }
+}
+
 .v_slider__list {
   margin-bottom: 0;
+}
+
+.vm--modal {
+  overflow: visible !important;
 }
 
 .vm--overlay {
