added ProfileSecurity component

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -2,6 +2,10 @@ button {
   padding: 0;
   background: none;
   border: none;
+
+  &:not(:focus) {
+    outline: none;
+  }
 }
 
 .Btn {
@@ -50,5 +54,9 @@ button {
   &--centered {
     margin-left: 50%;
     transform: translateX(-50%);
+  }
+
+  &--full {
+    width: 100%;
   }
 }
