added cursor pointer

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -221,6 +221,7 @@ a {
     text-align: center;
     color: var(--color-text-main);
     background: var(--color-bg);
+    cursor: pointer;
 
     &:last-child {
       margin-right: 0;
