--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -148,8 +148,8 @@ a {
 
 .Close {
   position: relative;
-  width: 12px;
-  height: 12px;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
 
   &:before, &:after {
@@ -158,7 +158,7 @@ a {
     top: 50%;
     width: 100%;
     height: 1px;
-    background: var(--color-text-ghost);
+    background: #6A6E7F;
   }
 
   &:before {
