--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -1,3 +1,10 @@
+p {
+  margin-bottom: 25px;
+  font-size: 14px;
+  line-height: 1.66;
+  color: var(--color-text-ghost);
+}
+
 .Title {
   font-weight: 700;
   line-height: 1.18;
@@ -6,18 +13,17 @@
 
   &--type-h1 {
     font-size: 24px;
-    line-height: 1.295;
 
     @media (min-width: $screen-m) {
-      font-size: 30px;
+      font-size: 28px;
     }
 
     @media (min-width: $screen-l) {
-      font-size: 34px;
+      font-size: 30px;
     }
 
     @media (min-width: $screen-xl) {
-      font-size: 43px;
+      font-size: 33px;
     }
   }
 
@@ -63,10 +69,14 @@
   color: var(--color-main1);
 }
 
-.TextMain {
-  color: var(--color-text-main);
-}
+.Text {
+  &--main {
+    color: var(--color-text-main);
+  }
 
-h2 {
-  margin: 0;
+  &--additional {
+    font-size: 14px;
+    line-height: 1.66;
+    color: var(--color-text-ghost);
+  }
 }
