--- a/assets/styles/transitions.scss
+++ b/assets/styles/transitions.scss
@@ -9,6 +9,7 @@
 
 .slide-up-enter-active, .slide-up-leave-active {
   transition: all .5s ease-in-out;
+  transition-property: max-height;
   max-height: 2000px;
 }
 
