--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -9,7 +9,9 @@ button {
 }
 
 .Btn {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px 15px;
   font-size: 16px;
   font-weight: 700;
