--- a/assets/styles/transitions.scss
+++ b/assets/styles/transitions.scss
@@ -7,6 +7,15 @@
   opacity: 0;
 }
 
+.slide-right-enter-active, .slide-right-leave-active {
+  transition: all .5s ease;
+}
+
+.slide-right-enter, .slide-right-leave-to {
+  transform: translate(100%, 0);
+  opacity: 0;
+}
+
 .slide-up-enter-active, .slide-up-leave-active {
   transition: all .5s ease-in-out;
   transition-property: max-height;
