ROOM-4 added wibro animation

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,6 +3,7 @@
 @import './common';
 @import './links';
 @import './transitions';
+@import './animations';
 @import './table';
 @import './datepicker';
 @import './range';
