--- a/assets/styles/datepicker.scss
+++ b/assets/styles/datepicker.scss
@@ -10,6 +10,8 @@
     height: 100%;
     padding-left: 16px;
     font-weight: 700;
+    color: inherit;
+    background: inherit;
     border: none;
   }
 
