--- a/assets/styles/links.scss
+++ b/assets/styles/links.scss
@@ -14,3 +14,15 @@
 .router-link-exact-active {
   color: var(--color-main1);
 }
+
+.TextLink {
+  color: var(--color-text-main);
+
+  &:visited {
+    color: -webkit-link;
+  }
+
+  &:hover {
+    color: var(--color-main1);
+  }
+}
