--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -11,8 +11,10 @@ button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  font-weight: 700;
   text-align: center;
   text-decoration: none;
+  color: var(--color-text-main);
   border: none;
   cursor: pointer;
 
