ROOM-123 added dropzone with vueDropzone plugin

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import './animations';
 @import './table';
 @import './datepicker';
+@import './dropzone';
 @import './range';
 @import './page';
 @import './support-page';
