ROOM-174 added BaseModal component

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -291,6 +291,7 @@ a {
 .vm--modal {
   overflow: initial !important;
   background: transparent !important;
+  box-shadow: none !important;
 }
 
 .vm--overlay {
