optimized fonts loading

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -52,7 +52,7 @@ body {
   min-width: $screen-xxs;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', 'Verdana', sans-serif;
   background-color: var(--color-body);
 }
 
