--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -14,6 +14,14 @@ p {
   &--type-h1 {
     font-size: 24px;
 
+    @media (min-width: $screen-xs) {
+      font-size: 18px;
+    }
+
+    @media (min-width: $screen-s) {
+      font-size: 20px;
+    }
+
     @media (min-width: $screen-m) {
       font-size: 28px;
     }
