ROOM-277 added touch-action

--- a/components/homepage/AuthDialog/AuthDialog.scss
+++ b/components/homepage/AuthDialog/AuthDialog.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   overflow: auto;
   background: var(--color-bg);
+  touch-action: none;
 
   &-Tabs {
     margin-bottom: 4px;
