ROOM-277 added -webkit-overflow-scrolling to modal

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -304,6 +304,9 @@ a {
   overflow: initial !important;
   background: transparent !important;
   box-shadow: none !important;
+  touch-action: none;
+  -ms-touch-action: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 .vm--overlay {
