room-322 text in footer text in aml block in hero

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -49,14 +49,14 @@ input:-internal-autofill-selected:active {
 //}
 
 body {
-  min-width: $screen-xxs;
   width: 100%;
+  min-width: $screen-xxs;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', 'Verdana', sans-serif;
   background-color: var(--color-body);
-  -webkit-text-size-adjust: none;
-  min-height: 100%
+  -webkit-text-size-adjust: none
 }
 
 section, .Wrapper {
@@ -307,8 +307,8 @@ a {
   overflow: initial !important;
   background: transparent !important;
   box-shadow: none !important;
-  touch-action: none;
   -ms-touch-action: none;
+  touch-action: none;
   -webkit-overflow-scrolling: touch!important;
 }
 
