corrected modal styles

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -304,6 +304,7 @@ a {
 }
 
 .vm--modal {
+  height: auto !important;
   overflow: initial !important;
   background: transparent !important;
   box-shadow: none !important;
