--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -48,10 +48,15 @@ input:-internal-autofill-selected:active {
 //  scrollbar-color: #555454 #828181;
 //}
 
+html {
+  width: 100vw;
+  min-height: 100vh;
+}
+
 body {
-  width: 100%;
+  width: 100vw;
   min-width: $screen-xxs;
-  min-height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', 'Verdana', sans-serif;
