--- a/components/homepage/AuthDialog/AuthDialog.scss
+++ b/components/homepage/AuthDialog/AuthDialog.scss
@@ -149,7 +149,7 @@
   &-Input {
     width: 100%;
     height: 100%;
-    padding: 18px;
+    padding: 18px 33px 18px 18px;
     font-size: 16px;
     color: var(--color-text-main);
     background: transparent;
