NINE-356 corrected styles

--- a/components/homepage/AuthDialog/AuthDialog.scss
+++ b/components/homepage/AuthDialog/AuthDialog.scss
@@ -255,6 +255,8 @@
   }
 
   &-Dropdown--phoneCode {
+    display: flex;
+    justify-content: space-between;
     width: 170px;
     margin-right: 4px;
 
