--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -14,7 +14,7 @@ p {
   &--type-h1 {
     font-size: 24px;
 
-    @media (min-width: $screen-xs) {
+    @media (min-width: $screen-s) {
       font-size: 18px;
     }
 
