--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -8,12 +8,12 @@
 
 ::-moz-selection {
   text-shadow: none;
-  background: #b3d4fc;
+  //background: #b3d4fc;
 }
 
 ::selection {
   text-shadow: none;
-  background: #b3d4fc;
+  //background: #b3d4fc;
 }
 
 *:focus {
@@ -63,7 +63,8 @@ body {
   padding: 0;
   font-family: 'Montserrat', 'Verdana', sans-serif;
   background-color: var(--color-body);
-  -webkit-text-size-adjust: none
+  -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 section, .Wrapper {
