corrected selection bg

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -8,12 +8,12 @@
 
 ::-moz-selection {
   text-shadow: none;
-  //background: #b3d4fc;
+  background: #b3d4fc;
 }
 
 ::selection {
   text-shadow: none;
-  //background: #b3d4fc;
+  background: #b3d4fc;
 }
 
 *:focus {
