NINE-533 changed button color

--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -70,6 +70,15 @@ button {
 
   &--outline {
     background: transparent;
+    border: 2px solid var(--color-main1);
+
+    &:hover {
+      background: var(--color-hover3);
+    }
+  }
+
+  &--outline2 {
+    background: transparent;
     border: 2px solid var(--color-main2);
   }
 
