--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -62,6 +62,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', 'Verdana', sans-serif;
+  font-weight: 600;
   background-color: var(--color-body);
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: transparent;
