--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -57,7 +57,11 @@ p {
   }
 
   &--type-h4 {
-    font-size: 24px;
+    font-size: 14px;
+
+    @media (min-width: $screen-m) {
+      font-size: 16px;
+    }
   }
 
   &--color1 {
@@ -70,6 +74,10 @@ p {
 
   &--center {
     text-align: center;
+  }
+
+  &--search {
+
   }
 }
 
