NINE-559 added overlay

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -241,6 +241,16 @@ a {
   }
 }
 
+.Overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: rgba(6, 8, 30, 0.9);
+}
+
 .Euro {
   font-size: 18px;
 
