NINE-608 moved Advantages styles to new file

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -325,6 +325,103 @@ a {
   color: var(--color-error);
 }
 
+.Advantages {
+  width: 100%;
+
+  @media (min-width: $screen-m) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &-Advantage {
+    display: flex;
+    align-items: center;
+    margin-bottom: 12px;
+    padding: 24px 26px;
+    background: var(--color-bg);
+
+    @media (min-width: $screen-m) {
+      flex-grow: 1;
+      flex-basis: 25%;
+      margin-right: 12px;
+      margin-bottom: 0;
+    }
+
+    @media (min-width: $screen-l) {
+      margin-right: 13px;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-right: 15px;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  &-AdvantageText {
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--color-text-main);
+    text-transform: capitalize;
+
+    @media (min-width: $screen-l) {
+      margin-right: 16px;
+    }
+  }
+
+  &-AdvantageBlock {
+    margin-left: 10px;
+
+    @media (min-width: $screen-l) {
+      margin-left: 14px;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-left: 18px;
+    }
+  }
+
+  &-AdvantageTitle {
+    font-size: 12px;
+    color: var(--color-text-main);
+    text-transform: uppercase;
+
+    @media (min-width: $screen-m) {
+      font-size: 14px;
+    }
+
+    @media (min-width: $screen-l) {
+      font-size: 20px;
+    }
+  }
+
+  &-AdvantageInfo {
+    font-size: 9px;
+    color: var(--color-text-faded);
+    text-transform: uppercase;
+
+    @media (min-width: $screen-l) {
+      font-size: 12px;
+    }
+  }
+}
+
+.Advantages--min {
+  .Advantages-Advantage {
+    padding: 24px 14px;
+
+    @media (min-width: $screen-l) {
+      padding: 24px 21px;
+    }
+
+    @media (min-width: $screen-xl) {
+      padding: 33px 54px;
+    }
+  }
+}
+
 .v_slider__list {
   margin-bottom: 0;
 }
