--- a/assets/styles/table.scss
+++ b/assets/styles/table.scss
@@ -42,3 +42,19 @@
     }
   }
 }
+
+.Table--scrollable {
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #6a6e7f transparent;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    background: var(--color-bg);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #6a6e7f;
+    border-radius: 3px;
+  }
+}
