--- a/assets/styles/page.scss
+++ b/assets/styles/page.scss
@@ -115,7 +115,8 @@
   }
 
   &-Block {
-    display: flex;
+    display: grid;
+    grid-template-columns: 30px auto;
     margin-bottom: 8px;
     padding: 24px;
     background: var(--color-bg);
@@ -131,6 +132,7 @@
     margin-right: 16px;
     font-size: 14px;
     font-weight: 700;
+    line-height: 1.66;
     color: var(--color-text-main);
   }
 
