NINE-646 changed main color

--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -74,7 +74,7 @@ button {
     border: 2px solid var(--color-main1);
 
     &:hover {
-      background: var(--color-hover3);
+      background: var(--color-main1);
     }
   }
 
