--- a/assets/styles/cssVariables.scss
+++ b/assets/styles/cssVariables.scss
@@ -1,5 +1,5 @@
 :root {
-  --color-main1: #f3b233;
+  --color-main1: #E45809;
   --color-main2: #eb1c2a;
   --color-badge: #0734a5;
   --color-text-main: #fff;
@@ -12,8 +12,7 @@
   --color-border: rgba(88, 92, 131, 0.3);
   --color-border2: #979797;
   --color-hover: #c40916;
-  --color-hover2: #ffd708;
-  --color-hover3: #f3b233;
+  --color-hover2: #FF8139;
   --color-accept: #67b12d;
   --color-discard: #cc1f1f;
   --color-error: #eb1c2a;
