--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -49,6 +49,14 @@ button {
     background: none;
   }
 
+  &--color1 {
+    background: var(--color-main1);
+
+    &:hover {
+      background: var(--color-hover2);
+    }
+  }
+
   &--color {
     background: var(--color-main2);
 
