NINE-646 replaced authdialog icons

--- a/components/homepage/AuthDialog/AuthDialog.scss
+++ b/components/homepage/AuthDialog/AuthDialog.scss
@@ -60,8 +60,8 @@
   }
 
   &-BannerFeatureIcon {
-    height: 30px;
     margin-bottom: 15px;
+    fill: var(--color-main1);
   }
 
   &-BannerFeatureName {
