--- a/assets/styles/cssVariables.scss
+++ b/assets/styles/cssVariables.scss
@@ -30,4 +30,8 @@
   --color-bg-mobnav-lighter: rgba(56, 62, 85, 0.3);
   --color-form: #1e1a46;
   --color-body: #060e2b;
+
+  --border-radius-default: 8px;
+  --border-radius-6: 6px;
+  --border-radius-8: 8px;
 }
