NINE-610 corrected checkbox styles

--- a/assets/styles/cssVariables.scss
+++ b/assets/styles/cssVariables.scss
@@ -32,6 +32,7 @@
   --color-body: #060e2b;
 
   --border-radius-default: 8px;
+  --border-radius-4: 4px;
   --border-radius-6: 6px;
   --border-radius-8: 8px;
 }
