NINE-646 topbar styles

--- a/assets/styles/cssVariables.scss
+++ b/assets/styles/cssVariables.scss
@@ -1,6 +1,6 @@
 :root {
   --color-main1: #E45809;
-  --color-main2: #eb1c2a;
+  --color-main2: #E45809;
   --color-badge: #0734a5;
   --color-text-main: #fff;
   --color-text-faded: #aeb3c7;
