--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -61,7 +61,7 @@ button {
     background: var(--color-main2);
 
     &:hover {
-      background: var(--color-hover);
+      background: var(--color-hover2);
     }
   }
 
