NINE-646 corrected placeholders

--- a/components/homepage/AuthDialog/AuthDialog.scss
+++ b/components/homepage/AuthDialog/AuthDialog.scss
@@ -324,6 +324,7 @@
     position: absolute;
     top: 0;
     left: 20px;
+    z-index: 10;
     font-weight: 700;
     line-height: 58px;
     text-transform: uppercase;
