--- a/components/homepage/MobileNavEffects.scss
+++ b/components/homepage/MobileNavEffects.scss
@@ -1,6 +1,6 @@
 @mixin touch-btn-1 {
-  background: #0ca649!important;
-}
-@mixin touch-btn-2 {
-  background: rgba(255, 69, 69, 0.85)!important;
+  border-radius: 3px;
+  transition: background-color 0.07s;
+  background: rgba(255, 255, 255, 0.18);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
