--- a/components/homepage/MobileNavEffects.scss
+++ b/components/homepage/MobileNavEffects.scss
@@ -4,3 +4,10 @@
   background: rgba(255, 255, 255, 0.18);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
+
+@mixin touch-btn-2 {
+  border-radius: 0;
+  transition: background-color 0.03s;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
