--- a/components/homepage/MobileNavEffects.scss
+++ b/components/homepage/MobileNavEffects.scss
@@ -11,3 +11,11 @@
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
+
+@mixin touch-btn-3 {
+  border-radius: 0;
+  transition: background-color 0.03s;
+  background-image: linear-gradient(top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
+
