--- a/components/homepage/MobileNavEffects.scss
+++ b/components/homepage/MobileNavEffects.scss
@@ -25,3 +25,10 @@
   background-image: linear-gradient(top, var(--color-bg-darker), rgba(255, 255, 255, 0));
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
+
+@mixin touch-btn-5 {
+  background-image: url(~@/assets/img/tap-effect.svg);
+  background-size: 64px 48px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
