NINE-838 corrected styles

--- a/assets/styles/cssVariables.scss
+++ b/assets/styles/cssVariables.scss
@@ -31,7 +31,7 @@
   --color-bg-mobnav-lighter: rgba(56, 62, 85, 0.3);
   --color-form: #1e1a46;
   --color-body: #060e2b;
-
+  --color-card-hover: rgba(22, 30, 56, 0.6);
   --border-radius-default: 8px;
   --border-radius-4: 4px;
   --border-radius-6: 6px;
